--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,8 @@
   %body
   = render 'layouts/header'
   .container
+    =flash.each do |name, msg|
+      =content_tag(:div,msg,class: "alert alert-info")
     =yield
   
 
