--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,6 +1,8 @@
 .jumbotron.center
   %h1 Welcome to my app!
+  - if user_signed_in?
+    -#do something
   %p
-    .btn.btn-default.btn-lg= link_to "Log In", "#"
-    .btn.btn-default.btn-lg= link_to "Sign Up", "#"
+    .btn.btn-default.btn-lg= link_to "Log In", new_user_session_path
+    .btn.btn-default.btn-lg= link_to "Sign Up", new_user_registration_path
     
