bootstrapped devise pages

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,2 +1,2 @@
 %h1 About US
-%p We are working on our uh one month uh rails. Pinteresting app?
+%p We are working on our uh one month uh rails. Pinteresting app?.<{{{>< 
