--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -17,5 +17,6 @@
         %li= link_to "About", about_path
         - if user_signed_in?
           %li= link_to "Log Out", destroy_user_session_path, method: :delete
+          %li= link_to "Account Settings", edit_user_registration_path
         - else
           %li= link_to "Sign In", new_user_session_path
