--- a/app/views/pins/_form.html.haml
+++ b/app/views/pins/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@pin) do |f|
+= form_for(@pin), html: {multipart: true} do |f|
   - if @pin.errors.any?
     #error_explanation
       %h2
@@ -8,7 +8,11 @@
         - @pin.errors.full_messages.each do |msg|
           %li= msg
   .form-group
+    = f.label :image
+    = f.file_field :image, class: "form-control"
+  .form-group
     = f.label :description
     = f.text_field :description, class: "form-control"
+  
   .form-group
     = f.submit class: "btn btn-primary"
